src/objects/DMSPM__SPM_Trialforce_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DMSPM__Document_Folder_API_Name__c</fullName>
        <defaultValue>&quot;Dealmaker_SPM_Trialforce&quot;</defaultValue>
        <label>Document Folder API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Document_Folder_Namespace__c</fullName>
        <label>Document Folder Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Enable_Trialforce_Config__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Trialforce Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Trend_30_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runPipelineOppTrend30Report&quot;</defaultValue>
        <label>Pipeline Trend 30 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Trend_60_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runPipelineOppTrend60Report&quot;</defaultValue>
        <label>Pipeline Trend 60 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Trend_90_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runPipelineOppTrend90Report&quot;</defaultValue>
        <label>Pipeline Trend 90 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Trend_Now_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runPipelineOppTrendCurrentReport&quot;</defaultValue>
        <label>Pipeline Trend Now Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Revenue_Trend_30_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runRevenueOppTrendMile2Report&quot;</defaultValue>
        <label>Revenue Trend 30 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Revenue_Trend_60_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runRevenueOppTrendMile1Report&quot;</defaultValue>
        <label>Revenue Trend 60 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Revenue_Trend_90_Day_Report_API_Name__c</fullName>
        <defaultValue>&quot;SPMReportRunner_runRevenueOppTrendStartReport&quot;</defaultValue>
        <label>Revenue Trend 90 Day Report API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dealmaker SPM Trialforce Settings</label>
</CustomObject>